Fixed small bug with header z-index

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   top: 0;
   width: 100%;
   height: 55px;
+  z-index: 99;
 }
 .header ul {
   list-style-type: none;
@@ -210,7 +211,7 @@ body {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     left: 0;
     top: 0;
 	padding-top:10vh;
